# board-game-io-base

./: Cargo.toml
bindings/: ServerMessage.ts  UserInfo.ts
example/: main.rs
example/ui/: index.html  package-lock.json  package.json  vite.config.js
example/ui/src/: App.svelte  BoardGameClient.svelte  BoardGameUi.svelte  Config.svelte  GameView.svelte  app.css  main.js
example/ui/src/bindings/: ClientMessage.ts  PlayerId.ts
jslib/: ServerMessage.ts  UserId.js  index.js  index.ts  package.json
src/: client_handler.rs  error.rs  game.rs  game_room.rs  generate_typescript_files.rs  ids.rs  lib.rs  protocol.rs  reconnect_token.rs  room.rs  room_id.rs  room_manager.rs  server.rs  user_id.rs
