[package]
name = "board-game-io-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "board_game_io_base"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "example/main.rs"

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17.2"
futures-util = "0.3"
